# rust-bootcamp-05-chat

./: Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/middlewares/: server_time.rs
chat_server/: Cargo.toml  app.yaml  chat.yaml
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: messages.rs
chat_server/src/models/: chat.rs  user.rs  workspace.rs
chat_test/: Cargo.toml  chat.yaml  notify.yaml
migrations/: 20240601084843_initial.sql  20240620112622_triggers.sql
notify_server/: Cargo.toml  notify.yaml
notify_server/src/: config.rs  lib.rs
src/: config.rs  main.rs
